<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.justjava.MainActivity">

    <EditText
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/toppings_hdr"
        android:textAllCaps="true" />

    <CheckBox
        android:id="@+id/whipped_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/whipped_cream_checkbox"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/chocolate_checkbox"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/quantity_hdr"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrementQty"
            android:text="@string/decrement_button"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/price_per_cup"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="incrementQty"
            android:text="@string/increment_button"
            android:textAllCaps="true" />

    </LinearLayout>

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:text="@string/order_summary_hdr"-->
        <!--android:textAllCaps="true" />-->


    <!--<TextView-->
        <!--android:id="@+id/order_summary_message"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/order_summary_text"-->
        <!--android:textColor="#000000"-->
        <!--android:textSize="16sp" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/submit_order_button"
        android:textAllCaps="true" />

</LinearLayout>
